traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:5: error: not found: type cpt
    ecritMessage(msc:cpt)    
                     ^TraversalByColumn:5: error: not found: value msc
    ecritMessage(msc:cpt)    
                 ^